--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <div class="board">
+            <div class="turn"></div>
             <div class="line1">
                 <div class="cell" id="0"></div>
                 <div class="cell" id="1"></div>
@@ -25,10 +26,11 @@
                 <div class="cell" id="7"></div>
                 <div class="cell" id="8"></div>
             </div>
-            </br>
-            </br>
-            </br>
-            </br>
+            <div class="choose-game-text"></div>
+            <div class="choose-game">
+                <button id="computer">VS Computer</button>
+                <button id="player">VS Player</button>
+            </div>
 
         </div>
         <div class="game-winning">
