--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Tic Tac Toe</title>
 </head>
 <body>
     <div class="container">
         <div class="board">
+            <div class="game-mode"></div>
             <div class="turn"></div>
             <div class="line1">
                 <div class="cell" id="0"></div>
