--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
     <title>Tic Tac Toe</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="board">
-            <div class="game-mode"></div>
-            <div class="turn"></div>
-            <div class="line1">
-                <div class="cell" id="0"></div>
-                <div class="cell" id="1"></div>
-                <div class="cell" id="2"></div>
-            </div>
-            <div class="line2">
-                <div class="cell" id="3"></div>
-                <div class="cell" id="4"></div>
-                <div class="cell" id="5"></div>
-            </div>
-            <div class="line3">
-                <div class="cell" id="6"></div>
-                <div class="cell" id="7"></div>
-                <div class="cell" id="8"></div>
-            </div>
-            <div class="choose-game-text"></div>
-            <div class="choose-game">
-                <button id="computer">VS Computer</button>
-                <button id="player">VS Player</button>
-            </div>
-
+      <div class="board">
+        <div class="game-mode"></div>
+        <div class="turn"></div>
+        <div class="line1">
+          <div class="cell" id="0"></div>
+          <div class="cell" id="1"></div>
+          <div class="cell" id="2"></div>
         </div>
-        <div class="game-winning">
-            <div class="wins"></div>
-            <button class="restart">Restart</button>
+        <div class="line2">
+          <div class="cell" id="3"></div>
+          <div class="cell" id="4"></div>
+          <div class="cell" id="5"></div>
         </div>
+        <div class="line3">
+          <div class="cell" id="6"></div>
+          <div class="cell" id="7"></div>
+          <div class="cell" id="8"></div>
+        </div>
+        <div class="choose-game-text"></div>
+        <div class="choose-game">
+          <button id="computer">VS Computer</button>
+          <button id="player">VS Player</button>
+          <button id="easy" class="modes">Easy Mode</button>
+          <button id="hard" class="modes">Hard Mode</button>
+        </div>
+      </div>
+      <div class="game-winning">
+        <div class="wins"></div>
+        <button class="restart">Restart</button>
+      </div>
     </div>
 
     <script src="./game.js"></script>
-</body>
+  </body>
 </html>
